# gnn-for-arithmetics

./: README.md  pyproject.toml
arigin/: data_generation.py  expressions.py  features.py  preprocessing.py
arigin/graph/: elements.py  generation.py  models.py
playground/: test_generation.ipynb  test_graph_from_expression.ipynb
playground/aggregations/: hierarchic_aggregation.ipynb
playground/basic_understanding/: test_cora.ipynb  test_cora2.ipynb
playground/gat_vs_mlp/: test_torch_geometric_embedding.ipynb  test_torch_geometric_embedding_small.ipynb  test_torch_geometric_gat.ipynb  test_train_arithmetics_using_mlp.ipynb
playground/test_functions/: satzbaum  test_generation.ipynb  test_graph_from_expression.ipynb  test_torch_geometric_gat_2.ipynb  test_torch_geometric_gcn.ipynb
tests/: test_data_generation.py  test_graph_generation.py
